infra/airflow/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gw-to-airflow
  namespace: airflow
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-ingress
  to:
    - group: ""
      kind: Service
      name: airflow-api-server
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow-route
  namespace: airflow
spec:
  parentRefs:
    - name: external-gw
      namespace: istio-ingress
  hostnames:
    - "airflow.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: airflow-api-server
          namespace: airflow
          port: 8080
